almost completed form styles with theme switch and fixed form overflow issue

--- a/src/invoice-form/InvoiceForm.scss
+++ b/src/invoice-form/InvoiceForm.scss
@@ -1,5 +1,4 @@
 @import '../App';
-
 @mixin bigScreenPadding() {
 	padding: 30px 55px;
 }
@@ -53,20 +52,14 @@
 
 	//form container styles
 	.invoice-form-children {
-		max-height: 400px;
+		max-height: 60%;
 		overflow-y: auto;
 		padding: 0 55px;
-
-
+		font-family: $spartan;
 	}
-
-
-
 
 	.invoice-form-buttons {
 		width: 100%;
-		position: absolute;
-		bottom: 10px;
 		@include bigScreenPadding();
 
 		display: flex;
@@ -117,13 +110,6 @@
 	}
 }
 
-
-
-
-
-
-
-
 @media (max-width: 909px) {
 	.invoice-form {
 		.invoice-form-title {
@@ -143,17 +129,9 @@
 
 		.invoice-form-children {
 			padding: 0 30px;
-
-
 		}
 	}
 }
-
-
-
-
-
-
 
 @media screen and (max-width: 909px) and (min-height: 910px) {
 	.invoice-form {
